objects/vaultp1__c.object
<CustomObject>
    <fields>
        <fullName>checkbox10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkbox1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkbox2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkboxField10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Field 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkboxField1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Field 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkboxField2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Field 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>currency1__c</fullName>
        <label>Currency1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>currency2__c</fullName>
        <label>Currency2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>currencyField1__c</fullName>
        <label>Currency Field 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>currencyField2__c</fullName>
        <label>Currency Field 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>date1__c</fullName>
        <label>Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date2__c</fullName>
        <label>Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dateField1__c</fullName>
        <label>Date Field 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dateField2__c</fullName>
        <label>Date Field 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dateTime1__c</fullName>
        <label>Date/Time1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dateTime2__c</fullName>
        <label>Date/Time2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dateTimeField1__c</fullName>
        <label>Date/Time Field 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dateTimeField2__c</fullName>
        <label>Date/Time Field 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>email10__c</fullName>
        <label>Email10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>email1__c</fullName>
        <label>Email1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>email2__c</fullName>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>emailField10__c</fullName>
        <label>Email Field 10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>emailField1__c</fullName>
        <label>Email Field 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>emailField2__c</fullName>
        <label>Email Field 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>encryptedText1__c</fullName>
        <label>EncryptedText 1</label>
        <length>160</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>encryptedText2__c</fullName>
        <label>EncryptedText 2</label>
        <length>160</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>encryptedTextField1__c</fullName>
        <label>Encrypted Text Field 1</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>encryptedTextField2__c</fullName>
        <label>Encrypted Text Field 2</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>geo1__c</fullName>
        <label>Geolocation1</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geo2__c</fullName>
        <label>Geolocation2</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geoField1__c</fullName>
        <label>Geolocation Field 1</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geoField2__c</fullName>
        <label>Geolocation Field 2</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>longTextArea1__c</fullName>
        <label>LongTextArea1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>longTextArea2__c</fullName>
        <label>LongTextArea2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>longTextAreaField1__c</fullName>
        <label>Long Text Area Field 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>longTextAreaField2__c</fullName>
        <label>Long Text Area Field 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>number10__c</fullName>
        <label>Number10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number11__c</fullName>
        <label>Number11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number12__c</fullName>
        <label>Number12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>numberField10__c</fullName>
        <label>Number Field 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>numberField11__c</fullName>
        <label>Number Field 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>numberField12__c</fullName>
        <label>Number Field 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percent10__c</fullName>
        <label>Percent10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percent1__c</fullName>
        <label>Percent1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percent2__c</fullName>
        <label>Percent2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percentField10__c</fullName>
        <label>Percent Field 10</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percentField1__c</fullName>
        <label>Percent Field 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percentField2__c</fullName>
        <label>Percent Field 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>phone10__c</fullName>
        <label>Phone10</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phone1__c</fullName>
        <label>Phone1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phone2__c</fullName>
        <label>Phone2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phoneField10__c</fullName>
        <label>Phone Field 10</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phoneField1__c</fullName>
        <label>Phone Field 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phoneField2__c</fullName>
        <label>Phone Field 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>richTextArea1__c</fullName>
        <label>Rich Text Area1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>richTextArea2__c</fullName>
        <label>Rich Text Area2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>richTextAreaField1__c</fullName>
        <label>Rich Text Area Field 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>richTextAreaField2__c</fullName>
        <label>Rich Text Area Field 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>text10__c</fullName>
        <label>Text10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text11__c</fullName>
        <label>Text11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text12__c</fullName>
        <label>Text12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>textArea1__c</fullName>
        <label>Text Area1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>textArea2__c</fullName>
        <label>Text Area2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>textAreaField1__c</fullName>
        <label>Text Area Field 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>textAreaField2__c</fullName>
        <label>Text Area Field 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>textField10__c</fullName>
        <label>Text Field 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>textField11__c</fullName>
        <label>Text Field 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>textField12__c</fullName>
        <label>Text Field 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url10__c</fullName>
        <label>URL10</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>url1__c</fullName>
        <label>URL1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>url2__c</fullName>
        <label>URL2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>urlField10__c</fullName>
        <label>URL Field 10</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>urlField1__c</fullName>
        <label>URL Field 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>urlField2__c</fullName>
        <label>URL Field 2</label>
        <type>Url</type>
    </fields>
    <label>vaultp1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vaultp1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>